<resources>
    <string name="app_name">PoshCalc</string>
    <string name="action_settings">Settings</string>
    <string name="settings_button_descr">Settings Button</string>
    <string name="purchase_price_header">Enter Purchase Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poshcalc">PoshCalc</string>
    <string name="item_purchase_price">Item purchase price</string>
    <string name="dollar_sign">$</string>
    <string name="projected_sell_price">Item Price Range</string>
    <string name="price_code_chart">Price Code Chart:</string>
    <string name="taxes">Taxes (%)</string>
    <string name="priceEquation">%Fees + ($Purchase + (%Taxes + ($Profit + $Capital)))</string>
    <string name="fees">Fees (%)</string>
    <string name="capital">Capital ($)</string>
    <string name="profit">Profit ($)</string>
    <string name="save">Save</string>
    <string name="save_settings">Save settings</string>
    <string name="conversion_chart">Conversion Chart</string>
    <string name="calculate">Calculate</string>
    <string name="item_price_code">Item Price Code</string>
    <string name="update">Update</string>
</resources>
